--- a/Race.html
+++ b/Race.html
@@ -7,14 +7,14 @@
   <body>
     <h1> The Animal Race</h1>
     <h2> Rocky the Bunny, Myrtle the Turtle and Big Bad Wolf </h2>
-      <div class="rabbit"> 
+      <div class='rabbit'> 
       </div>
-      <div class="turtle"> 
+      <div class='turtle'> 
       </div>
-      <div class="wolf"> 
+      <div class='wolf'> 
       </div> 
       <ul class = "next"> 
-        <button onclick="onButtonClick()"> Click to Start the Race </button> 
+        <button> Click to Start the Race </button> 
         <li class= "race"> 
           <p> The race is about to begin! A distracted but fast rabbit and a slow but focused turtle are the contendents... </p>
           <p> Oh wait, a hungry wolf is around. Rocky the Bunny better run!! </p> 
